Adjusted styles of events widget to fix wrap around

--- a/style.css
+++ b/style.css
@@ -117,8 +117,8 @@ h1 > a {font-size:75%;margin:0;padding:0;line-heigh:1em;color:#764e19 !important
 #home .widget > .events > li > .date > .month {font-size:115%;}
 #home .widget > .events > li > .date > .day {font-size:125%;font-weight:bold;}
 #home .widget > .events > li > .date > span {display:block;text-align:center;font-size:120%;}
-#home .widget > .events > li > a {font-size:100%;display:block;position:relative;right:-15px;margin-top:5px;margin-right:25px;}
-.msie7 #home .widget > .events > li > a {right:-15px;margin-top:5px;}
+#home .widget > .events > li > a {font-size:100%;display:block;position:relative;padding-left:70px; margin-top:3px;}
+.msie7 #home .widget > .events > li > a {margin-top:5px;}
 
 /*/ Subpage /*/
 #page h1 {position:relative;left:-10px;}
